@@ -18,8 +18,6 @@ NEEDED = 'fanstatic.needed'
 DEBUG = 'debug'
 MINIFIED = 'minified'
 
-_head_regex = re.compile(compat.as_bytestring('(<head[^>]*>)'))
-
 _resource_file_existence_checking = True
 
 
@@ -1011,9 +1009,9 @@ class NeededResources(object):
           inclusions into. This string must have a ``<head>`` section.
         """
         to_insert = self.render()
-        return _head_regex.sub(
-            compat.as_bytestring('\\1\n    %s\n' % (to_insert,)),
-            html, count=1)
+        return html.replace(
+            compat.as_bytestring('</head>'),
+            compat.as_bytestring('%s</head>' % to_insert), 1)
 
     def render_topbottom(self):
         """Render resource inclusions separately into top and bottom fragments.
@@ -1064,8 +1062,9 @@ class NeededResources(object):
         """
         top, bottom = self.render_topbottom()
         if top:
-            html = _head_regex.sub(
-                compat.as_bytestring('\\1\n    %s\n' % (top,)), html, count=1)
+            html = html.replace(
+                compat.as_bytestring('</head>'),
+                compat.as_bytestring('%s</head>' % top), 1)
         if bottom:
             html = html.replace(
                 compat.as_bytestring('</body>'),
